[tool.poetry]
name = "arcaflow-lib-kubernetes"
version = "0.1.0"
description = ""
authors = ["Arcalot Contributors"]
license = "Apache-2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.10.0"
kubernetes = ">=25.3.0"
PyYAML = ">=5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
