[tool.poetry]
name = "arcaflow-lib-kubernetes"
version = "0.0.0"
description = "Kubernetes connection handling library for Arcaflow"
authors = ["Arcalot Contributors"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.10.1"
kubernetes = ">=25.3.0"
PyYAML = ">=5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
